--- a/public/dashboard/contaHome.html
+++ b/public/dashboard/contaHome.html
@@ -45,10 +45,42 @@
     <div class="banner">
         <div class="container">
                 <img src="./imagens/DC-whitelogo.png" alt="" style="height: 90px;">
+                <div class="hello">
+                    <h3>Bem vindo(a), <span id="b_usuario">usuário</span>!</h3>
+                </div>
         </div>
     </div>
-        <div class="box1">
+
+            <div class="conteudoHome">
+                <div class="contaHomeBox">
+                    <p>Faça sua primeira postagem</p>
+                    <a href="./contaBlog.html">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="100" width="87.5" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg>
+                    </a>
+                </div>
+
+                <div class="contaHomeBox">
+                    <p>Conheça mais sobre ORV</p>
+                    <a href="./starsystem.html">
+                        <img src="./../imagens/shines.png" style="height: 100px;">
+                    </a>
+                </div>
+
+                <div class="contaHomeBox">
+                    <p>Marque seu progresso de leitura</p>
+                    <a href="./conta.html">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="100" width="87.5" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg>
+                    </a>
+                </div>
+            </div>
+    
+
+
 
 </div>
 </body>
 </html>
+
+<script>
+        b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
+</script>
