--- a/public/dashboard/contaBlog.html
+++ b/public/dashboard/contaBlog.html
@@ -108,9 +108,8 @@
             console.log("resposta: ", resposta);
     
             if (resposta.ok) {
-                window.alert(sessionStorage.getItem(NOME_USUARIO) + ', seu post foi realizado com sucesso!');
+                window.alert(sessionStorage.NOME_USUARIO + ', seu post foi realizado com sucesso!');
                 limparFormulario();
-                finalizarAguardar();
             } else if (resposta.status == 404) {
                 window.alert("Deu 404!");
             } else {
@@ -118,7 +117,6 @@
             }
         }).catch(function (resposta) {
             console.log(`#ERRO: ${resposta}`);
-            finalizarAguardar();
         });
     
         return false;
