--- a/public/login.html
+++ b/public/login.html
@@ -99,7 +99,7 @@
                     sessionStorage.ID_USUARIO = json.idUsuario;
 
                     // redirecionar para dashboard
-                    window.location.href = "./../dashboard/conta.html";
+                    window.location.href = "./../dashboard/contaHome.html";
                 });
             } else {
                 console.log("Houve um erro ao tentar realizar o login!");
