--- a/public/dashboard/contaHome.html
+++ b/public/dashboard/contaHome.html
@@ -19,12 +19,12 @@
         </div>
 
         <div class="navbarMiddle">
-            <a href="./contaBlog.html">Feed</a>
+            <a href="./contaBlog.html">Postar</a>
             <div style="display: flex; align-items: center;">
                 <b><a href="./contaHome.html" style="text-decoration: underline;">Home</a></b>
                 <img src="./../imagens/star.png" alt="" style="height: 20px;">
             </div>
-            <a href="./starSystem.html">Star System</a>
+            <a href="./starSystem.html">Feed</a>
         </div>
         
         <div class="navbarRight">
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="contaHomeBox">
-                    <p>Conheça mais sobre ORV</p>
+                    <p>Visite o feed de postagens</p>
                     <a href="./starsystem.html">
                         <img src="./../imagens/shines.png" style="height: 100px;">
                     </a>
