--- a/public/dashboard/starsystem.html
+++ b/public/dashboard/starsystem.html
@@ -16,10 +16,10 @@
         </div>
 
         <div class="navbarMiddle">
-            <a href="./contaBlog.html">Feed</a>
+            <a href="./contaBlog.html">Postar</a>
             <a href="./contaHome.html">Home</a>
             <div style="display: flex; align-items: center;">
-            <b><a href="./starSystem.html" style="text-decoration: underline;">Star System</a></b>
+            <b><a href="./starSystem.html" style="text-decoration: underline;">Feed</a></b>
             <img src="./../imagens/star.png" alt="" style="height: 20px;">
             </div>
         </div>
@@ -39,12 +39,9 @@
         </div>
     </div>
 
-    <div class="banner">
-        <div class="container">
-                <img src="./imagens/DC-whitelogo.png" alt="" style="height: 90px;">
-        </div>
-    </div>
         <div class="box1">
+
+    
     
 </body>
 </html>
