--- a/public/sobreORV.html
+++ b/public/sobreORV.html
@@ -51,13 +51,18 @@
                     <br><br>
                 Ao longo de sua jornada, Kim Dokja se encontra enfrentando diversos desafios, tanto físicos quanto psicológicos. O foco principal da novel é relatar a vivência de um leitor dentro a história que ele leu, explorando a relação que o protagonista de ORV (Omniscient Reader’s Viewpoint), Kim Dokja, possui com o protagonista de TWSA(Três Maneiras de Sobreviver a um Apocalipse), Yoo Joonghyuk e com a escritora de TWSA, Han Sooyoung. Eles conhecem muito sobre o mundo apocalíptico que vivem, sendo um deles, respectivamente, um leitor, um regressor (aquele que volta ao início quanto encontra o fim da vida) e a própria criadora do mundo que veio a se tornar realidade. </p>
                 </div>
+                <div>
+                    <h2 style="display: flex; justify-content: center;">O apocalipse</h2>
+                    <br>
+                    <p>O apocalipse consiste em um sistema de estrelas, no qual é disponibilizado aos “participantes” do apocalipse cenários os quais eles precisam sobreviver, os dando uma recompensa caso sobrevivam. Os participantes são chamados de Encarnações, e durante sua participação nos cenários, eles são assistidos e patrocinados pelas Constelações, que podem oferecer às Encarnações habilidades especiais. Elas podem ser constelações Históricas (tais como famosos guerreiros na história da Coreia), Fábulas (temos como exemplo, o anjo Uriel) e Míticas (como os Zeus do Olympus). Apesar dos exemplos, anjos e Deuses do Olympus também podem ser constelações Míticas ou Fábulas, como Michael ou Perséfone. Essas nomenclaturas nada mais são que um ranking dessas constelações, servindo para medir seu poder com relação às outras. Um ranking que não foi citado, foi os Deuses de Fora, que seriam entidades esquecidas ou descartadas de “Rodadas” passada na Web Novel original (TWSA). Um Deus de Fora que não estava presente na novel original, é o “Secretive Plotter”, na tradução literal, Conspirador Secreto, que está competindo com outras constelações para ser o patrocinador de Kim Dokja.</p>
+                    </div>
             </div>
     
             <div class="textBoxes">
                 <div class="subTexts">  
                     <div class="subTextsBox">
                         <h3 style="display: flex; justify-content: center;">Encarnações</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sapiente veritatis, provident et exercitationem doloribus, rem ullam repellendus minus, earum quo delectus corporis eaque cumque beatae autem minima facilis illo!</p>
+                    <p>Encarnação seria o nome dado àqueles que estão situados em um apocalipse, o qual eles teriam de sobreviver. As encarnações seriam humanos, nesse caso, e eles são os participantes do apocalipse, passando por vários cenários e ganhando recompensas por sobreviverem</p>
                     </div>
                     <!-- ----------------------------- -->
                     <div class="subTextsBox">
