--- a/public/dashboard/conta.html
+++ b/public/dashboard/conta.html
@@ -17,9 +17,9 @@
         </div>
 
         <div class="navbarMiddle">
-            <a href="./contaBlog.html">Feed</a>
+            <a href="./contaBlog.html">Postar</a>
             <a href="./contaHome.html">Home</a>
-            <a href="./starSystem.html">Star System</a>
+            <a href="./starSystem.html">Feed</a>
         </div>
         
         <div class="navbarRight">
@@ -38,6 +38,9 @@
 
     <div class="banner">
         <div class="container">
+                <div class="hello">
+                <h3>Progresso de leitura de <span id="b_usuario">usuário</span></h3>
+                </div>
                 <img src="./imagens/DC-whitelogo.png" alt="" style="height: 90px;">
         </div>
     </div>
@@ -138,6 +141,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
 
 <script>
+          b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
 
     function status1(){
       var checkboxValue = document.getElementById('checkbox1');
@@ -330,32 +334,18 @@
 
 
 
-    function atualizarGrafico(idUsuario, dados, myChart) {
+    function atualizarGrafico(idUsuario, data, myChart) {
 
-        fetch(`/medidas/tempo-real/${idAquario}`, { cache: 'no-store' }).then(function (response) {
+        fetch(`/progresso/${idUsuario}/${capitulo}`, { cache: 'no-store' }).then(function (response) {
           if (response.ok) {
             response.json().then(function (novoRegistro) {
 
             obterdados(idUsuario);
             // alertar(novoRegistro, idAquario);
-            console.log(`Dados recebidos: ${JSON.stringify(novoRegistro)}`);
+            console.log(`Dados recebidos: ${JSON.stringify(capitulo)}`);
             console.log(`Dados atuais do gráfico:`);
             console.log(dados);
 
-            let avisoCaptura = document.getElementById(`avisoCaptura${idAquario}`)
-            avisoCaptura.innerHTML = ""
-
-
-            if (novoRegistro[0].momento_grafico == dados.labels[dados.labels.length - 1]) {
-                console.log("---------------------------------------------------------------")
-                console.log("Como não há dados novos para captura, o gráfico não atualizará.")
-                avisoCaptura.innerHTML = "<i class='fa-solid fa-triangle-exclamation'></i> Foi trazido o dado mais atual capturado pelo sensor. <br> Como não há dados novos a exibir, o gráfico não atualizará."
-                console.log("Horário do novo dado capturado:")
-                console.log(novoRegistro[0].momento_grafico)
-                console.log("Horário do último dado capturado:")
-                console.log(dados.labels[dados.labels.length - 1])
-                console.log("---------------------------------------------------------------")
-            } else {
                 // tirando e colocando valores no gráfico
                 dados.labels.shift(); // apagar o primeiro
                 dados.labels.push(novoRegistro[0].momento_grafico); // incluir um novo momento
@@ -364,15 +354,14 @@
                 dados.datasets[0].data.push(novoRegistro[0].capitulo); // incluir uma nova medida de umidade
 
                 myChart.update();
-            }
 
             // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
-            proximaAtualizacao = setTimeout(() => atualizarGrafico(idAquario, dados, myChart), 1000);
+            proximaAtualizacao = setTimeout(() => atualizarGrafico(idUsuario, dados, myChart), 1000);
         });
     } else {
-        console.error('Nenhum dado encontrado ou erro na API');
+        console.error('Erro');
         // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
-        proximaAtualizacao = setTimeout(() => atualizarGrafico(idAquario, dados, myChart), 2000);
+        proximaAtualizacao = setTimeout(() => atualizarGrafico(idUsuario, dados, myChart), 2000);
     }
 })
     .catch(function (error) {
