finalizando dashboard pessoal dinâmica - check

--- a/public/dashboard/starsystem.html
+++ b/public/dashboard/starsystem.html
@@ -19,7 +19,7 @@
             <a href="./contaBlog.html">Postar</a>
             <a href="./contaHome.html">Home</a>
             <div style="display: flex; align-items: center;">
-            <b><a href="./starSystem.html" style="text-decoration: underline;">Feed</a></b>
+            <b><a href="./starSystem.html" style="text-decoration: underline;">Sobre ORV</a></b>
             <img src="./../imagens/star.png" alt="" style="height: 20px;">
             </div>
         </div>
