--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,12 @@
                 <img src="./imagens/DC-whitelogo.png" alt="" style="height: 90px;">
         </div>
     </div>
+    <div>
+        <h1>O que é uma Web Novel?</h1>
+        <p>
+            
+        </p>
+    </div>
         <div class="box1">
 
             <div class="galeria">
