--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,10 @@
                 <img src="./imagens/DC-whitelogo.png" alt="" style="height: 90px;">
         </div>
     </div>
-    <div>
+    <div class="textBox">
         <h1>O que é uma Web Novel?</h1>
         <p>
-            
+            Com o avanço da tecnologia, muitos livros físicos passaram a ser acessíveis a partir de sites institucionais, ou até mesmo em formato de PDF. Diante disso, a partir dos anos 2000, as Web Novels começaram a ganhar popularidade diante a sua acessibilidade, que, diferentemente de livros físicos ou até alguns digitais, seu conteúdo é disponibilizado para leitores de forma 100% gratuita. As Web Novels, inicialmente, ganharam muita popularidade na Ásia, e ao longo dos anos, foi se espalhando ao redor do mundo, compartilhando também diversos gêneros de histórias, tais como fantasia e/ou isekai. Isekai e Isekai reverso é um gênero muito popular em Web Novels, tratando, respectivamente, do “renascimento” do protagonista em um novo mundo, ou o “novo mundo” indo para a vida do protagonista. Dois exemplos muito populares de Isekai e Isekai reverso seriam “The Beginning After The End” e “Solo Leveling”, que posteriormente ganharam sua versão de Manhwa (quadrinhos coreanos) e Anime (animação japonesa).
         </p>
     </div>
         <div class="box1">
