--- a/public/sobreORV.html
+++ b/public/sobreORV.html
@@ -101,8 +101,10 @@
         <div>
             <div class="imageBoxes">
                 <div class="imageBox">
-                    <div class="imageContent">
-                    <img src="./imagens/IMG-persos/KDJ.jpg" alt="" style="height: 400px;">
+                    <div class="imageContent"> 
+                        <div class=""> 
+                            <img src="./imagens/IMG-persos/KDJ.jpg" alt="" style="height: 400px;">
+                        </div>
                     </div>
                 </div>
                 <div class="imageBox">
